syntax = "proto3";

package verifiable_credentials;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message VerifiablePresentation {
    optional string vp_id = 1;
    TypeStruct vp_type = 2;
    message RepeatedCredential {
        repeated VerifiableCredential repeated_vc = 1;
    }
    oneof verifiable_credential {
        VerifiableCredential single_vc = 3;
        RepeatedCredential multiple_vc = 4;
    }
    optional string holder = 5;
    Proof proof = 6;
}

message TypeStruct {
    message RepeatedType {
        repeated string repeated_type = 1;
    }
    oneof oneof_type {
        string single_type = 1;
        RepeatedType multiple_type = 2;
    }
}

message VerifiableCredential {
    repeated string context = 1;
    optional string vc_id = 2;
    TypeStruct vc_type = 3;
    optional string name = 4;
    optional string description = 5;
    string issuer = 6;
    google.protobuf.Timestamp valid_from = 7;
    google.protobuf.Timestamp valid_until = 8;
    message CredentialStatusStruct {
        optional string status_id = 1;
        TypeStruct status_type = 2;
    }
    message RepeatedCredentialStatus {
        repeated CredentialStatusStruct repeated_status = 1;
    }
    oneof credential_status {
        CredentialStatusStruct single_status = 9;
        RepeatedCredentialStatus multiple_status = 10;
    }
    message CredentialSchemaStruct {
        string schema_id = 1;
        string schema_type = 2;
    }
    message RepeatedCredentialSchema {
        repeated CredentialSchemaStruct repeated_schema = 1;
    }
    oneof credential_schema {
        CredentialSchemaStruct single_schema = 11;
        RepeatedCredentialSchema multiple_schema = 12;
    }
    google.protobuf.Any credential_subject = 13;
    Proof proof = 14;
}

message Proof {
    string proof_type = 1;
    bytes jws = 2;
    string proof_purpose = 3;
    google.protobuf.Timestamp created = 4;
}
